traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.error
Compilation error:
TraversalDiagonal:18: error: ')' expected but integer literal found.
        place+=1
               ^